--- a/pomodoro_timer.html
+++ b/pomodoro_timer.html
@@ -78,7 +78,7 @@
             <label for="volume">Volume:</label>
             <input type="range" id="volume" name="volume" min="0" max="1" step="0.1" value="0.5">
             <audio id="alarm">
-                <source src="https://github.com/heatherkimbley/pomodoro/blob/5e56ca3c9a86945faf324de374a6f9bc4f02a5f4/alarm_clock_sound.mp3" type="audio/mpeg">
+                <source src="https://github.com/heatherkimbley/pomodoro/blob/main/alarm_clock_sound.mp3?raw=true" type="audio/mpeg">
             </audio>
         </div>
 	</div>
